# chunk_search

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BLUEPRINT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  requirements.txt
data/: faq.txt  faq_chunks.jsonl
docs/: API.md  BLUEPRINT.md  DEVELOPMENT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  MINIMAL_PLAN.md  PERMISSIONS_SETUP.md  SETUP_GUIDE.md
frontend/: index.html
